Fix 'products-and-docs' cards on mobile divices

--- a/_sass/pages/partners-doc.scss
+++ b/_sass/pages/partners-doc.scss
@@ -118,14 +118,6 @@
     }
     .back {
       border: solid 1px #768692;
-      @media #{$max-1200} {
-        display: none;
-      }
-      .flipper-title {
-        @media #{$max-1200} {
-          display: none;
-        }
-      }
     }
     .flipper-title {
       font-size: 16px;
